--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <ul >
-  <li tabindex="0">
-    <img src="../assets/images/geometry.jpg" alt="etwas beschreibt Mathemathik" tabindex="0"/>
+  <li >
+    <img src="../assets/images/geometry.jpg" alt="etwas beschreibt Mathemathik" />
     <section class="details">
       <section class="header">
         <span class="name"><h2>Mathe Kurs</h2></span>
@@ -16,8 +16,8 @@
       <span class="kurse-time">Montags vom 15:30 bis 17:30 Uhr und Freitags vom 13:00 bis 15:00 Uhr</span>
     </section>
 
-      <li tabindex="0">
-     <img src="../assets/images/physik.jpg" alt="physik themen" tabindex="0"/>
+      <li >
+     <img src="../assets/images/physik.jpg" alt="physik themen" />
      <section class="details">
        <section class="header">
          <span class="name"><h2>Physik Kurs</h2></span>
@@ -25,8 +25,8 @@
        <span class="time">Donnerstags vom 13:00 bis 15:00 Uhr</span>
       </section>
 
-    <li tabindex="0">
-      <img src="../assets/images/chemie.jpg" alt="chemie themen" tabindex="0"/>
+    <li>
+      <img src="../assets/images/chemie.jpg" alt="chemie themen" />
       <section class="details">
         <section class="header">
           <span class="name"><h2>Chemie Kurs</h2></span>
@@ -34,8 +34,8 @@
         <span class="time">Mitwochs vom 13:00 bis 15:00 Uhr</span>
       </section>
 
-          <li tabindex="0">
-            <img src="../assets/images/Biologie.jpg" alt="Biologie Thema" tabindex="0"/>
+          <li >
+            <img src="../assets/images/Biologie.jpg" alt="Biologie Thema"/>
             <section class="details">
               <section class="header">
                 <span class="name"><h2>Biologie Kurs</h2></span>
@@ -43,8 +43,8 @@
               <span class="time">Montags vom 15:00 bis 17:00 Uhr</span>
             </section>
 
-            <li tabindex="0">
-        <img src="../assets/images/german.jpg" alt="Deutsch kurse" tabindex="0"/>
+            <li >
+        <img src="../assets/images/german.jpg" alt="Deutsch kurse" />
         <section class="details">
           <section class="header">
             <span class="name" ><h2>Deutsch Kurs</h2></span>
@@ -52,8 +52,8 @@
           <span class="time">Dienstags vom 13:00 bis 15:00 Uhr </span>
         </section>
 
-        <li tabindex="0">
-            <img src="../assets/images/Englisch.jpg" alt="Englisch kurse" tabindex="0"/>
+        <li >
+            <img src="../assets/images/Englisch.jpg" alt="Englisch kurse" />
             <section class="details">
               <section class="header">
                 <span class="name"><h2>Englisch Kurs</h2></span>
