--- a/Nachhilfe/src/app/components/home/home.component.html
+++ b/Nachhilfe/src/app/components/home/home.component.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
-  <h1 tabindex="0">Light Nachhilfe</h1>
+  <h1>Light Nachhilfe</h1>
   <section>
-    <button class="mat-raised-button" typ="submit" [routerLink]="'users/login'"> anmeldung</button>
+    <button class="mat-raised-button" typ="submit" [routerLink]="'users/login'" tabindex="0"> anmeldung</button>
   </section>
   <div class="object-fit" ><img src="../assets/images/schule.jpeg" alt="schule logo, drei personen mit einem Buch und Lernmateriale " tabindex="0"/></div>
   <mat-sidenav-container class="sidenav-container">
