--- a/Nachhilfe/src/app/components/startseite/startseite.component.html
+++ b/Nachhilfe/src/app/components/startseite/startseite.component.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
 <app-cards></app-cards>
-<mat-sidenav-container class="sidenav-container" tabindex="0">
-      <span *ngIf="isLoggedIn" class="menu-container" tabindex="0">
+<mat-sidenav-container class="sidenav-container">
+      <span *ngIf="isLoggedIn" class="menu-container">
         <a routerLink="/users">{{username}}</a>
      </span>
      <body>
