--- a/Nachhilfe/src/app/components/home/home.component.html
+++ b/Nachhilfe/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
   <section>
     <button class="mat-raised-button" typ="submit" [routerLink]="'users/login'" tabindex="0"> anmeldung</button>
   </section>
-  <div class="object-fit" ><img src="../assets/images/schule.jpeg" alt="schule logo, drei personen mit einem Buch und Lernmateriale " tabindex="0"/></div>
+  <div class="object-fit" ><img src="../assets/images/schule.jpeg" alt="schule logo, drei personen mit einem Buch und Lernmateriale "/></div>
   <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport
         [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
