--- a/Nachhilfe/src/app/components/login/login.component.html
+++ b/Nachhilfe/src/app/components/login/login.component.html
@@ -1,42 +1,45 @@
-
 <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
-  <mat-card  class="shipping-card">
+  <mat-card class="shipping-card">
     <header>
-      <mat-card-title class="card-color" >Login</mat-card-title><p>
+      <mat-card-title class="card-color" heading="Login">Login</mat-card-title>
+      <p>
         <title>Loginformular</title>
     </header>
     <mat-card-content>
       <p>
-        <fieldset class="full-width">
-          <label for="username" >Nutzername</label><p></p>
-          <input matInput tabindex="0" class="input" id="username" placeholder="Nutzername" formControlName="username" aria-label="Nutzername"
-          aria-describedby="username-error"
-          autocomplete="username" >
-          <mat-icon matSuffix>person</mat-icon><p>
-          <mat-error tabindex="0" *ngIf="loginForm.controls['username'].hasError('required')">
-            Nutzername <strong>erforderlich</strong>
-          </mat-error><p></p>
-          <label for="password">Passwort</label><p></p>
-          <input matInput tabindex="0" id="password" placeholder="Passwort" formControlName="password" [type]="hide ? 'password' : 'text'"  aria-label="Passwort"
-          aria-describedby="password-error"
-          autocomplete="current-password">
-          <button tabindex="0" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hide" for="password">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </fieldset>
+      <fieldset class="full-width">
+        <legend>Nutzerdaten für den Login</legend><p></p>
+        <label id="username-label" for="username">Nutzername</label><p></p>
+        <input matInput tabindex="0" class="input" id="username" placeholder="Geben Sie Ihren Nutzernamen ein"
+          formControlName="username" aria-label="Nutzername: Nutzername" aria-labelledby="username-label"
+          aria-describedby="username-error" autocomplete="username">
+        <mat-icon matSuffix>person</mat-icon>
+        <mat-error tabindex="0" *ngIf="loginForm.controls['username'].hasError('required')">
+          <span style="color: rgb(123, 2, 2);">Nutzername</span> <strong>erforderlich</strong>
+        </mat-error>
+        <p></p>
+        <label id="password-label" for="password">Passwort</label><p></p>
+        <input matInput tabindex="0" id="password" placeholder="Geben Sie Ihr Passwort ein" formControlName="password"
+          [type]="hide? 'password' : 'text'" aria-label="Passwort: Passwort" aria-labelledby="password-label"
+          aria-describedby="password-error" autocomplete="current-password">
+        <button tabindex="0" mat-icon-button matSuffix (click)="hide =!hide" [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide" for="password">
+          <mat-icon>{{hide? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </fieldset>
     </mat-card-content>
     <p></p>
     <section>
-      <button class="mat-raised-button" id= "login" type="submit" tabindex="0" (ngSubmit)="onSubmit()" role="button"
-      aria-label="Login">Login</button>
+      <button class="mat-raised-button" id="login" type="submit" tabindex="0" (ngSubmit)="onSubmit()" role="button"
+        aria-label="Login">
+        Login
+      </button>
     </section>
   </mat-card>
 </form>
 <footer>
-<a href="/" tabindex="0" role="link" aria-label="Zurück zur Startseite"><strong>Zurück</strong></a>
-<p></p>
-<a href="/users"  tabindex="0" role="link" aria-label="Zur Registrierungsformular"><strong>Zur Registrieungsformular</strong></a>
+  <a href="/" tabindex="0" role="link" aria-label="Zurück zur Startseite"><strong>Zurück</strong></a>
+  <p></p>
+  <a href="/users" tabindex="0" role="link" aria-label="Zur Registrierungsformular"><strong>Zur
+      Registrieungsformular</strong></a>
 </footer>
-
-
